manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82222190"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82222190"
  template:
    metadata:
      labels:
        app: "82222190"
    spec:
      containers:
        - name: "82222190"
          image: ceappacr.azurecr.io/82222190
          ports:
          - containerPort: 8080
