manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82222190-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: aztest-82222190.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: "82222190"
            port:
              number: 8080
        pathType: Prefix
